# GameLibrary

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
Entwurf/: GameLoop.puml
include/: CycleInt.h  Drawable.h  DrawingManager.h  Element.h  Game.h  Input.h  InputManager.h  InputStorage.h  Inputable.h  MyTime.h  Storage.h  Test.h  Time.h  TypBenenungen.h  Updatable.h  UpdateManager.h
res/: hässlichkeit.aseprite
src/: CycleInt.cpp  Drawable.h  DrawingManager.cpp  Element.cpp  Game.cpp  Input.cpp  InputManager.cpp  InputStorage.cpp  Storage.cpp  Test.cpp  Test.h  Time.cpp  UpdateManager.cpp  main.cpp
tests/: CycleIntTest.cpp  InputMangerTest.cpp  InputStorageTest.cpp  InputTest.cpp  UpatadeManagerTest.cpp
tests/Mocks/: InputableMock.cpp  InputableMock.h  UpdateableMock.h
